public/scss/main.scss
/* ... */
#container .article .inner .right .proposal-support {
  float:left;
  background:#F6F6F7;
  p { padding:13px 13px 0 13px; margin:0 0 13px 0; font-size:15px; color: #465866; }
  .count {
    padding: 13px;
    color: #465866;
    text-transform:uppercase;
    font-weight:bold;
    border-top: 1px solid #fff;
    .icon {
      float:left;
      margin: 0 5px 0 0;
      width:11px; height:12px;
      background:url('/images/icons/icon_sprite.png') no-repeat 0 -18px;
    }
  }

  @include border-radius(4px);
}

#follow {
  position:relative;
  height:35px;
  margin: 0 0 10px 0;
  form { position:absolute; left:322px; }
}

.follow.basic {
  button {
    background:none;
    padding:0;
    text-shadow:none;
    @include box-shadow(0 0 0 );
    span { display:none; }
  }

  button:active, button:hover {
    padding:0; margin:0;
    border:none;
    background:none;
    @include box-shadow(0 0 0 );
  }

}

#container .article .inner .right .map a {
  font-size:10px!important;
}

.ie7 #container .article .my_opinion,
.ie8 #container .article .my_opinion {
  button, input[type="submit"] {
    margin: 0 0 0 20px;
  }
}

#container .article .my_opinion {
  padding:10px;
  margin: 0 0 10px 0;
  background:#EEEEEE;

  &.against  { background:#FFF3E1; }
  &.in_favor { background:#EDF3E5; }

  clear:both; overflow:hidden;
  @include border-radius(4px);

  .result {
    float:left;
    padding:8px 0;
    width: 310px;
    font-size:15px;
  }

  form {
    float:right;
    margin: 0 0 0 10px;
  }
}

#container .article .inner .content form.notifications ul {
  float:left;
  margin:10px 0 20px 0;

  li {
    width:281px - 40;
    height:215px - 40;
    margin-right:30px;
    padding:20px;
    background:#fff;
    border: 1px solid #E2E5E8;
    cursor: pointer;

    @include opacity(0.6);
    @include inline-block;
    @include border-radius(4px);
    @include transition-property(all);
    @include transition-duration(300ms);

    &:hover,
    &.selected {
      @include opacity(1);
      background:#F2F7F9;
      border: 1px solid #CCCCCC;
      @include box-shadow(0 2px 3px rgba(0, 0, 0, 0.1));
    }

    &.collaborate {width:315px - 40;}
    &.last { margin-right:0; }
    &:last-child { margin-right:0; }

    position:relative;

    .content {
      position:absolute;
      top:125px;
      width:253px;

      strong { display:block; margin: 0 0 7px 0; text-align:center; font-size:17px; color:$dark_blue; }
    }

    p { width:243px; padding:0; margin:0 0 0 0; line-height:16px; font-size:13px; }

    .letter {
      display:block;
      position:absolute;
      width:94px;
      height:58px;
      background:url('/images/icons/letters_sprite.png') no-repeat 0 -25px;
    }

    .letter.minimun { top:45px; left:100px;}

    .letter.basics {
      left:85px;
      width:135px;
      height:82px;
      background:url('/images/icons/letters_sprite.png') no-repeat -102px 1px;
    }

    .letter.all {
      left:60px;
      width:171px;
      height:83px;
      background:url('/images/icons/letters_sprite.png') no-repeat -243px 1px;
    }

    .white_button { float:left; }
  }
}

.agenda_map { position:none; clear: both; overflow: hidden; height:700px; }
.agenda_map .map {top:76px; left:35px; position:absolute; @include opacity(0);}
.agenda_map ul.agenda { background:#fff; position:absolute; left:30px; width:929px; }

/* Editable */

a.editable {
  position:absolute;
  right:0px; top:-10px;
  z-index:50;
  display:block;
  width:38px;
  height:38px;
  background:url('/images/box_simple_bkg.png') no-repeat 0 -70px;

  &:hover {
    width:65px;
    height:65px;
    background:url('/images/box_simple_bkg.png') no-repeat 0 -110px;
  }
}
/* ... */

